[package]
name = "grahams_relay" # ToDo
version = "0.1.0"
authors = [""] # ToDo: you are the author ;)
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1


[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/animation",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/jpeg",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

# problem with rapier
#dynamic = [
#    "bevy/dynamic",
#]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.10" }
bevy_asset_loader = { version = "0.11" }
bevy_rapier3d = { version = "0.15" }
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.4"
ron = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
