[package]
name = "grahams_relay" # ToDo
version = "0.1.0"
authors = [""] # ToDo: you are the author ;)
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1


[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_asset",
    "bevy/animation",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/bevy_scene",
    "bevy/jpeg",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

# problem with rapier
#dynamic = [
#    "bevy/dynamic",
#]

[dependencies]
bevy = { version = "0.8", default-features = false }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
bevy_rapier3d = { version = "0.16" }
rand = { version = "0.8.3" }
serde = { version = "1", features = ["derive"] }

winit = { version = "0.26", default-features = false }
image = { version = "0.24", default-features = false }
anyhow = "1.0.62"
ron = "0.8.0"

[build-dependencies]
embed-resource = "1.4"
